<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="horizontal"
    android:padding="@dimen/widget_margin">

    <TextView
        android:id="@+id/appwidget_text_ingredient_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/widget_margin"
        android:layout_weight="3"
        android:text="@string/appwidget_text_ingredient_name"
        android:textColor="@color/cardview_light_background"
        android:textSize="@dimen/text_size_one"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/appwidget_text_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/widget_margin"
        android:layout_weight="1"
        android:text="@string/appwidget_text_quantity"
        android:textColor="@color/cardview_light_background"
        android:textSize="@dimen/text_size_one"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/appwidget_text_measure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/widget_margin"
        android:layout_weight="1"
        android:text="@string/appwidget_text_measure"
        android:textColor="@color/cardview_light_background"
        android:textSize="@dimen/text_size_one"
        android:textStyle="bold|italic" />
</LinearLayout>