<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/dessert_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardBackgroundColor="@color/colorPrimaryThree"
    app:cardElevation="@dimen/card_elevation"
    card_view:cardUseCompatPadding="true">

    <ImageView
        android:id="@+id/image_dessert"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/nutella_pie_recipe" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryThree"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_dessert_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/recipe_name_margin"
                android:layout_marginStart="@dimen/recipe_name_margin"
                android:layout_marginTop="@dimen/recipe_name_margin"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimaryTwo"
                android:textSize="@dimen/text_size_three"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/recipe_name_margin"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/main_recipe_preparation_time_margin"
                    android:layout_marginRight="@dimen/main_recipe_preparation_time_margin"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="@dimen/main_recipe_clock_margin_right"
                        android:layout_marginRight="@dimen/main_recipe_clock_margin_right"
                        android:layout_marginTop="@dimen/main_recipe_clock_margin_top"
                        android:src="@drawable/clock_outline_grey" />

                    <TextView
                        android:id="@+id/text_view_total_time"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:alpha="0.5"
                        android:text="@string/total_time_one"
                        android:textColor="@color/colorPrimaryTwo" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/main_recipe_clock_margin_right"
                        android:layout_marginTop="@dimen/main_recipe_clock_margin_top"
                        android:src="@drawable/account_grey" />

                    <TextView
                        android:id="@+id/text_view_servings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.5"
                        android:text="@string/total_person"
                        android:textColor="@color/colorPrimaryTwo" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
